--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,26 @@
-.App {
+.post__list {
   width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 20px;
 }
 
-.buttons-block {
+.user {
+  padding: 20px;
+  border: 1px solid orange;
+  margin-top: 15px;
+  width: 100%;
   display: flex;
-  align-items: center;
-  gap: 40px;
+  justify-content: space-between;
+}
 
-  button {
-    border: none;
-    outline: none;
-    background: aqua;
-    color: black;
-    padding: 12px 16px;
-    border-radius: 12px;
-    cursor: pointer;
-  }
+.w100 {
+  width: 100%;
+}
+
+.post {
+  padding: 20px;
+  border: 1px solid teal;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
